# CollabRef

./: .gitignore  CMakeLists.txt  GITHUB_BUILD.md  LICENSE  LINUX.md  README.md  TEAM_SETUP.md  build.bat  build.sh  deploy.bat  server.conf
.github/workflows/: build.yml
CollabRef-Portable/: README.txt
server/: package-lock.json  package.json  server.js
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/canvas/: CanvasScene.cpp  CanvasScene.h  CanvasView.cpp  CanvasView.h  ImageItem.cpp  ImageItem.h  SelectionRect.cpp  SelectionRect.h  TextItem.cpp  TextItem.h
src/data/: Board.cpp  Board.h  BoardSerializer.cpp  BoardSerializer.h
src/network/: CollabManager.cpp  CollabManager.h  SyncClient.cpp  SyncClient.h  SyncServer.cpp  SyncServer.h
src/ui/: CursorWidget.cpp  CursorWidget.h  TitleBar.cpp  TitleBar.h  ToolBar.cpp  ToolBar.h
